[project]
name = "honeychow"
version = "0.1.0"
description = "A fast, asynchronous username enumeration tool."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Ritchie Mwewa", email = "rly0nheart@duck.com" }
]
keywords = ["osint", "username", "enumeration", "security", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "aiohttp>=3.13",
    "rich>=14.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.urls]
Repository = "https://github.com/libreosint/honeychow"
Issues = "https://github.com/libreosint/honeychow/issues"

[project.scripts]
honeychow = "honeychow.src._main:start"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["honeychow*"]

[tool.setuptools.package-data]
honeychow = ["../data/*.json"]
